added sign up and sign in authentication

--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -11,7 +11,7 @@
         <input type="text" id="email" name="email" class="form-control" placeholder="Enter Email">
         <label for="password">Password</label>
         <!-- name is what we will use to reference when we post data to a server -->
-        <input type="text" id="password" name="password" class="form-control" placeholder="Enter Password">
+        <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password">
         <br>
         <div align="center"><button class="btn btn-dark" type="submit">Submit</button></div>
         
