--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -26,7 +26,7 @@
         <label for="password1">Password</label>
         <!-- name is what we will use to reference when we post data to a server -->
         <input 
-            type="text" 
+            type="password" 
             id="password1" 
             name="password1" 
             class="form-control" 
@@ -34,7 +34,7 @@
         >
         <label for="password2">Re-Enter Password</label>
         <input 
-            type="text" 
+            type="password" 
             id="password2" 
             name="password2" 
             class="form-control" 
